new path for get company

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
       <li><a [routerLink]="['numbers']">Numbers to Words</a></li>
       <li><a [routerLink]="['inventarylist']">Inventary List</a></li>
       <li><a [routerLink]="['salary']">Salary form</a></li>
+       <li><a [routerLink]="['search-company']">Search a company</a></li>
     </ul>
   </nav>
   <router-outlet></router-outlet>
